Disable normal loot respawn when enabled